Jann 30/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCCC_Archives_File_Locator_Box__c</fullName>
        <label>TCCC Archives&apos; File Locator Box #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Analysis_Strategy_Presentations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Analysis/Strategy Presentations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Investment_Bank__c</fullName>
        <label>Target Investment Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Strategic_Analysis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Strategic Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Deal__c</fullName>
        <label>Type of Deal</label>
        <picklist>
            <picklistValues>
                <fullName>BOTTLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER/CAPABILITIES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Case_Multiple__c</fullName>
        <label>Unit Case Multiple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Case_Volume__c</fullName>
        <label>Unit Case Volume</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valuation_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valuation Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valuation_Request_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valuation Request List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valuation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wire_Transfer_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wire Transfer Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Full_Year_UC_Multiple__c</fullName>
        <label>1st Full Year UC Multiple</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_Full_Year_UC_Volume__c</fullName>
        <label>1st Full Year UC Volume</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project_Manager__c</columns>
        <columns>NAME</columns>
        <columns>Other_Associates__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Deals</fullName>
        <columns>Project_Manager__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Deal_Number__c</columns>
        <columns>NAME</columns>
        <columns>Deal_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Deal__c.Transactions</value>
        </filters>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Latin America</value>
        </filters>
        <label>LA Active Transactions</label>
    </listViews>
    <listViews>
        <fullName>All_Targets</fullName>
        <columns>Target__c</columns>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Deal_Number__c</columns>
        <columns>Deal_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Deal__c.Transactions</value>
        </filters>
        <label>All Targets</label>
    </listViews>
    <listViews>
        <fullName>All_Transactions</fullName>
        <columns>Project_Manager__c</columns>
        <columns>Deal_Number__c</columns>
        <columns>NAME</columns>
        <columns>Deal_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Deal__c.Transactions</value>
        </filters>
        <label>All Transactions</label>
    </listViews>
    <listViews>
        <fullName>Alok_Deo</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Other_Associates__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Group__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Manager__c</field>
            <operation>contains</operation>
            <value>Alok Deo</value>
        </filters>
        <filters>
            <field>Other_Associates__c</field>
            <operation>includes</operation>
            <value>alok Deo</value>
        </filters>
        <label>Alok Deo</label>
    </listViews>
    <listViews>
        <fullName>Andriy_Avramenko</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Other_Associates__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Group__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Manager__c</field>
            <operation>contains</operation>
            <value>Andriy</value>
        </filters>
        <filters>
            <field>Other_Associates__c</field>
            <operation>includes</operation>
            <value>Andriy Avramenko</value>
        </filters>
        <label>Andriy Avramenko</label>
    </listViews>
    <listViews>
        <fullName>Anne_Taylor</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Other_Associates__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Group__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Manager__c</field>
            <operation>contains</operation>
            <value>Anne</value>
        </filters>
        <filters>
            <field>Other_Associates__c</field>
            <operation>includes</operation>
            <value>Anne K. &apos;CCNA&apos; Taylor</value>
        </filters>
        <label>Anne Taylor</label>
    </listViews>
    <listViews>
        <fullName>By_Project</fullName>
        <columns>Deal_Status__c</columns>
        <columns>Deal_Number__c</columns>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Business_Development_Dept_File__c</columns>
        <columns>TCCC_Archives_File_Locator_Box__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Deal__c.Transactions</value>
        </filters>
        <label>Project Files</label>
    </listViews>
    <listViews>
        <fullName>Cloris_Zhang</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Other_Associates__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Group__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Manager__c</field>
            <operation>contains</operation>
            <value>Cloris</value>
        </filters>
        <filters>
            <field>Other_Associates__c</field>
            <operation>includes</operation>
            <value>Cloris Zhang</value>
        </filters>
        <label>Cloris Zhang</label>
    </listViews>
    <listViews>
        <fullName>Javier_Drucker</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Other_Associates__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Group__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Manager__c</field>
            <operation>contains</operation>
            <value>Javier</value>
        </filters>
        <filters>
            <field>Other_Associates__c</field>
            <operation>includes</operation>
            <value>Javier Drucker</value>
        </filters>
        <label>Javier Drucker</label>
    </listViews>
    <listViews>
        <fullName>Jim_Murphy</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Other_Associates__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Group__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Manager__c</field>
            <operation>contains</operation>
            <value>Jim Murphy</value>
        </filters>
        <filters>
            <field>Other_Associates__c</field>
            <operation>includes</operation>
            <value>Jim Murphy</value>
        </filters>
        <label>Jim Murphy</label>
    </listViews>
    <listViews>
        <fullName>Jing_s_Test</fullName>
        <columns>NAME</columns>
        <columns>BIG__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Current_Status__c</columns>
        <columns>Deal_Category__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Deal_Structure__c</columns>
        <columns>Open_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Africa</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Deal__c.Transactions</value>
        </filters>
        <label>Transactions for Africa</label>
    </listViews>
    <listViews>
        <fullName>Jorge_Perez</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Other_Associates__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Group__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Manager__c</field>
            <operation>contains</operation>
            <value>Jorge Perez</value>
        </filters>
        <filters>
            <field>Other_Associates__c</field>
            <operation>includes</operation>
            <value>Jorge Perez</value>
        </filters>
        <label>Jorge Perez</label>
    </listViews>
    <listViews>
        <fullName>Marie_Quintero_Johnson</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Document_Security__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Group__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Manager__c</field>
            <operation>contains</operation>
            <value>Marie</value>
        </filters>
        <filters>
            <field>Other_Associates__c</field>
            <operation>includes</operation>
            <value>Marie Quintero-Johnson</value>
        </filters>
        <label>Marie Quintero-Johnson</label>
    </listViews>
    <listViews>
        <fullName>Mark_Westfall</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Other_Associates__c</columns>
        <columns>Deal_Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Group__c</columns>
        <columns>Business_Unit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Manager__c</field>
            <operation>contains</operation>
            <value>Mark Westfall</value>
        </filters>
        <filters>
            <field>Other_Associates__c</field>
            <operation>includes</operation>
            <value>Mark Westfall</value>
        </filters>
        <label>Mark Westfall</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>Transactions</fullName>
        <active>true</active>
        <label>Transactions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unsolicited_Opportunity</fullName>
        <active>true</active>
        <label>UnsolicitedOpportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>